public/css/content.css
/** Layout */

#welcome, #left, #middle, #right {
    position: fixed;
    top: 0;
    bottom: 0;
    z-index: 10;
}
#welcome {
    left: 0;
    right: 0;
}
#left {
    left: 0;
    width: 60px;
}
#middle {
    left: 60px;
    right: 0;
}
#right {
    right: -500px;
    bottom: auto;
    width: 500px;
    z-index: 20;
    -webkit-transition: right 120ms ease-in-out;
}
#right.active {
    right: 0;
}

#welcome > header,
#left > header,
#middle > header,
#right > header {
    background: #4D97C9;
    padding: 16px 20px;
    color: #FFF;
    font-family: Montserrat, sans-serif;
    font-size: 17px;
    text-transform: uppercase;
}
#left > header a,
#middle > header a,
#right > header a {
    display: inline-block;
    float: right;
    opacity: 0.6;
    margin-left: 20px;
}
#left > header a:hover,
#middle > header a:hover,
#right > header a:hover {
    opacity: 1;
}


/** Login */

#login {
    position: fixed;
    top: 50%;
    width: 100%;
    margin-top: -180px;
    text-align: center;
}
#login .logo {
    display: block;
    text-align: center;
    padding: 20px;
    font-size: 22px;
    font-family: Montserrat, sans-serif;
}
#login .logo i {
    display: block;
    padding-top: 36px;
    border-radius: 100%;
    height: 120px;
    width: 120px;
    background: #4c545c;
    color: #FFF;
    font-size: 50px;
    text-align: center;
    margin: auto;
    margin-bottom: 8px;
}
#login .box {
    width: 260px;
    margin: auto;
    padding: 20px;
    border-radius: 2px;
}
#login .box input {
    border: 1px solid #CCC;
    padding: 10px 20px;
    margin-bottom: 6px;
    border-radius: 2px;
    width: 100%;
}
#login .box input[type=password] {
    width: 145px;
}
#login .box button {
    vertical-align: top;
    padding: 13px 14px;
    border-radius: 2px;
}

/** Modals */

#modals {
    display: none;
    opacity: 0;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 8000;
    background: rgba(0, 0, 0, 0.6);
    -webkit-transition: all 200ms ease-in-out;
}
#modals.active {
    display: block;
    opacity: 1;
}

#modals .modal {
    display: none;
    opacity: 0;
    width: 460px;
    margin: auto;
    margin-top: 100px;
    background: #FFF;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
    -webkit-transition: all 200ms ease-in-out;
}
#modals .modal.active {
    display: block;
    opacity: 1;
}
#modals .modal header {
    font-size: 18px;
    font-family: Montserrat, sans-serif;
    text-transform: uppercase;
}
#modals .modal header,
#modals .modal main input {
    border: 0;
    border-bottom: 1px solid #CCC;
}
#modals .modal header,
#modals .modal main input,
#modals .modal footer {
    padding: 15px 20px;
}
#modals .modal main input {
    display: inline-block;
    width: 50%;
    margin: 0;
    margin-right: -3px;
}
#modals .modal main input:nth-child(1):not(:only-child),
#modals .modal main input:nth-child(3) {
    border-right: 1px dashed #CCC;
}
#modals .modal main input:only-child {
    width: 100%;
}
#modals .modal footer {
    background: #EEE;
    text-align: right;
}


/** Welcome */

#welcome {
    text-align: center;
}

#welcome #trees {
    display: block;
    padding: 0;
    margin-top: 100px;
    list-style-type: none;
}
#welcome #trees li {
    display: inline-block;
    vertical-align: top;
    margin: 20px;
    width: 190px;
}
#welcome #trees li a {
    display: block;
    text-align: center;
    padding: 20px;
    font-size: 22px;
    font-family: Montserrat, sans-serif;
}
#welcome #trees li a i {
    display: block;
    padding-top: 36px;
    border-radius: 100%;
    height: 120px;
    width: 120px;
    background: #4c545c;
    color: #FFF;
    font-size: 50px;
    text-align: center;
    margin: auto;
    margin-bottom: 8px;
}
#welcome #trees li a:hover {
    color: #4D97C9
}
#welcome #trees li a:hover i {
    background: #4D97C9
}

#welcome .add-tree {
    margin: 40px;
}


/** Left */

#left {
    background: #30363E;
    color: #FFF;
}
#left > header {
    padding: 8px 16px;
    background: #2F7AAD;
}
#left > header a {
    float: none;
    opacity: 0.8;
    font-size: 29px;
    margin-left: 0;
}



/** Middle */

#middle {
    counter-reset: section;
}

#middle ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

#middle ul.lines {
    position: fixed;
    top: 60px;
    left: 0;
    right: 0;
    bottom: 0:
}
#middle ul.lines li {
    padding: 4px 8px;
}
#middle ul.lines li:hover {
    padding: 5px 8px;
    padding-left: 24px;
    margin-top: -5px;
    left: 0;
    right: 0;
    z-index: -1000;
    color: #999;
}

#middle ul.tree {
    position: relative;
    padding: 15px 10px;
    height: calc(100% - 60px);
    overflow: auto;
}
#middle ul.tree .name {
    position: relative;
    display: block;
    padding: 4px 8px;
    border-radius: 4px;
}
#middle ul.tree .name:hover {
    cursor: pointer;
}
#middle ul.tree .name:hover::before {
    background: rgba(47, 135, 193, 0.15);
    color: #FFF;
}
#middle ul.tree .name.active {
    background: #666;
    color: #FFF;
}
#middle ul.tree > li,
#middle ul.tree ul.children > li {
    position: relative;
    margin-left: 4px;
}
#middle ul.tree ul.children > li::before {
    position: absolute;
    content: " ";
    top: 15px;
    left: -16px;
    width: 16px;
    border-top: 1px solid #CCC;
}
#middle ul.tree ul.children > li::after {
    position: absolute;
    content: " ";
    top: 0;
    bottom: 0;
    left: -16px;
    border-left: 1px solid #CCC;
}
#middle ul.tree ul.spouses > li:last-child > ul.children > li:last-child::after {
    bottom: auto;
    height: 16px;
}
#middle ul.tree ul.spouses {

}
#middle ul.tree ul.spouses > li {
    position: relative;
}
#middle ul.tree ul.spouses > li > .name i {
    margin-right: 4px;
    color: #BBB;
    font-style: normal;
}
#middle ul.tree ul.children {
    margin-left: 24px;
}


/** Right */

#right {
    color: #999;
    background: #EEE;
}

#right header {
    background: #2F7AAD;
}
#right main {
    width: 100%;
    border-left: 1px solid #CCC;
    background: #FFF;
}
#right main .head {
    width: 100%;
}
#right main .head .pic {
    display: inline-block;
    vertical-align: top;
    height: 180px;
    width: 180px;
    overflow: hidden;
    text-align: center;
    border-right: 1px solid #CCC;
    border-bottom: 1px solid #CCC;
}
#right main .head .pic img {
    height: 100%;
    width: auto;
}
#right main .head .names {
    display: inline-block;
    vertical-align: top;
    margin: 0 -3px;
    width: 320px;
}
#right main .head .names input[type=text] {
    display: block;
    width: 100%;
    margin: 0;
    border: 0;
    border-bottom: 1px solid #CCC;
    background: #FFF;
    padding: 15px 20px;
    font-size: 20px;
    height: 60px;
}
#right main .head .names .gender {
    border-bottom: 1px solid #CCC;
    padding: 15px 20px;
    height: 60px;
}
#right main .head .names .gender label {
    display: inline-block;
    font-size: 20px;
    cursor: pointer;
}
#right main .head .names .gender input {
    margin-right: 20px;
    cursor: pointer;
}
#right main .event {
    width: 100%;
    border-bottom: 1px solid #CCC;
    color: #CCC;
}
#right main .event input {
    border: 0;
    background: transparent;
    width: 145px;
    padding: 20px 15px;
}
#right main .event .remove-event {
    display: inline-block;
    padding: 4px 7px;
}
#right main .note {
    border-bottom: 1px solid #CCC;
}
#right main .note textarea {
    border: 0;
    background: transparent;
    padding: 20px 15px;
    width: 100%;
    height: 140px;
    display: block;
    resize: none;
}
#right main .sep {
    padding: 10px 15px;
    border-bottom: 1px solid #CCC;
    background: #EEE;
    font-size: 12px;
    font-weight: 600;
    text-transform: uppercase;
}
#right main .sep.title {
    background: #DDD;
}
#right main .sep a {
    float: right;
    color: #BBB;
}
#right main .sep a:hover {
    color: inherit;
}
#right footer {
    padding: 20px;
    background: #EEE;
    text-align: right;
    border-left: 1px solid #CCC;
    border-bottom: 1px solid #CCC;
}
#right footer .delete-person {
    margin-left: 20px;
}
#right .p-template,
#right .c-template {
    display: none;
}



.btn {
    display: inline-block;
    padding: 8px 16px;
    background: #CCC;
    border-radius: 4px;
    font-family: Montserrat, sans-serif;
    color: #FFF;
    text-transform: uppercase;
    font-size: 12px;
    border: 0;
}
.btn.btn-primary {
    background: rgba(47, 135, 193, 0.5);
}
.btn:hover {
    cursor: pointer;
    background: rgba(47, 135, 193, 0.85);
}

